Modal Overflow Fix

--- a/resources/assets/sass/_tweaks.scss
+++ b/resources/assets/sass/_tweaks.scss
@@ -10,3 +10,7 @@ a {
         outline: none;
     }
 }
+
+.v--modal-overlay .v--modal-box {
+    overflow: initial !important;
+}
